objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Application_start_date__c</fullName>
        <label>Application start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_details__c</fullName>
        <label>Course details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Personal Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students (Personal Account)</relationshipLabel>
        <relationshipName>Students1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>